<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="T_RequestEventTexts" Id="{72ad7cd5-3163-49f3-a482-5c290b81f025}">
    <Declaration><![CDATA[TYPE T_RequestEventTexts : 
	ARRAY[0..Param_EventLoggerListener.cMaxConcurrentEvents - 1] OF ST_RequestEventTexts; 
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>